{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 161,
  "lineage": "bb1896eb-876f-043a-586b-918b190967d9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "browntgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:897903365025:transit-gateway/tgw-030874af89d019462",
            "association_default_route_table_id": "tgw-rtb-0c693a81aacadd7fb",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "browntgw",
            "dns_support": "enable",
            "id": "tgw-030874af89d019462",
            "multicast_support": "disable",
            "owner_id": "897903365025",
            "propagation_default_route_table_id": "tgw-rtb-0c693a81aacadd7fb",
            "tags": {
              "Name": "browntgw"
            },
            "tags_all": {
              "Name": "browntgw"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "brown1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0f61fb9a3efbb9071",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0899884602e9349d5"
            ],
            "tags": {
              "Name": "brown1"
            },
            "tags_all": {
              "Name": "brown1"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-030874af89d019462",
            "vpc_id": "vpc-0c49e73e56e0be065",
            "vpc_owner_id": "897903365025"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_subnet.net1brown1",
            "aws_vpc.brown1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0042d231cd2e91cfd",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-059a906d68ddfb734"
            ],
            "tags": {
              "Name": "brown2"
            },
            "tags_all": {
              "Name": "brown2"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-030874af89d019462",
            "vpc_id": "vpc-04af33b2f82995bef",
            "vpc_owner_id": "897903365025"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_subnet.net1brown2",
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "brown3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0b4c5c1b9f7eae3a2",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0e332a0c7686fb2f0"
            ],
            "tags": {
              "Name": "brown3"
            },
            "tags_all": {
              "Name": "brown3"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-030874af89d019462",
            "vpc_id": "vpc-0ddd99e664a514f51",
            "vpc_owner_id": "897903365025"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_subnet.net1brown3",
            "aws_vpc.brown3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:897903365025:instance/i-0da13952b29ae4e5d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da13952b29ae4e5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "htduong01virgina",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01e80339e74aaabf8",
            "private_dns": "ip-10-198-1-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.198.1.8",
            "public_dns": "ec2-44-201-53-221.compute-1.amazonaws.com",
            "public_ip": "44.201.53.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c7ddedb89347a51c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0899884602e9349d5",
            "tags": {
              "Name": "web1"
            },
            "tags_all": {
              "Name": "web1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c6cb1df55c1b42c6"
            ]
          },
          "dependencies": [
            "aws_security_group.brown1sg",
            "aws_subnet.net1brown1",
            "aws_vpc.brown1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:897903365025:instance/i-087a36d4049c828eb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087a36d4049c828eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "htduong01virgina",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-058cd0e2048785f54",
            "private_dns": "ip-10-198-2-9.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.198.2.9",
            "public_dns": "ec2-34-230-1-180.compute-1.amazonaws.com",
            "public_ip": "34.230.1.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cd5a5ed41adfb13d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059a906d68ddfb734",
            "tags": {
              "Name": "web2"
            },
            "tags_all": {
              "Name": "web2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06ad6e9ff507ee71d"
            ]
          },
          "dependencies": [
            "aws_security_group.brown2sg",
            "aws_subnet.net1brown2",
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:897903365025:instance/i-001cead3de44c013d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-001cead3de44c013d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "htduong01virgina",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a841f2b86f002d63",
            "private_dns": "ip-10-198-3-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.198.3.11",
            "public_ip": "54.144.88.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02499d926d11fc81e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e332a0c7686fb2f0",
            "tags": {
              "Name": "web3"
            },
            "tags_all": {
              "Name": "web3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06dc6c1d6312b2783"
            ]
          },
          "dependencies": [
            "aws_security_group.brown3sg",
            "aws_subnet.net1brown3",
            "aws_vpc.brown3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "brown1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:internet-gateway/igw-0e4bae2a5f1f611a8",
            "id": "igw-0e4bae2a5f1f611a8",
            "owner_id": "897903365025",
            "tags": {
              "Name": "brown1"
            },
            "tags_all": {
              "Name": "brown1"
            },
            "vpc_id": "vpc-0c49e73e56e0be065"
          },
          "dependencies": [
            "aws_vpc.brown1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:internet-gateway/igw-0d532dd3c761fb73b",
            "id": "igw-0d532dd3c761fb73b",
            "owner_id": "897903365025",
            "tags": {
              "Name": "brown2"
            },
            "tags_all": {
              "Name": "brown2"
            },
            "vpc_id": "vpc-04af33b2f82995bef"
          },
          "dependencies": [
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "brown3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:internet-gateway/igw-059918d480898cc0a",
            "id": "igw-059918d480898cc0a",
            "owner_id": "897903365025",
            "tags": {
              "Name": "brown3"
            },
            "tags_all": {
              "Name": "brown3"
            },
            "vpc_id": "vpc-0ddd99e664a514f51"
          },
          "dependencies": [
            "aws_vpc.brown3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "brown1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:route-table/rtb-0e90b301dca2a0841",
            "id": "rtb-0e90b301dca2a0841",
            "owner_id": "897903365025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.198.2.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-030874af89d019462",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.198.3.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-030874af89d019462",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0e4bae2a5f1f611a8",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "brown1"
            },
            "tags_all": {
              "Name": "brown1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c49e73e56e0be065"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown1",
            "aws_vpc.brown1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:route-table/rtb-00deb86487e721607",
            "id": "rtb-00deb86487e721607",
            "owner_id": "897903365025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.198.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-030874af89d019462",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.198.3.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-030874af89d019462",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0d532dd3c761fb73b",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "brown2"
            },
            "tags_all": {
              "Name": "brown2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04af33b2f82995bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown2",
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "brown2-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:route-table/rtb-0ebe92227eb712350",
            "id": "rtb-0ebe92227eb712350",
            "owner_id": "897903365025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.198.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-030874af89d019462",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.198.3.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-030874af89d019462",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0d532dd3c761fb73b",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "brown2-1"
            },
            "tags_all": {
              "Name": "brown2-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04af33b2f82995bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown2",
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "brown2-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:route-table/rtb-072a9d9a316726774",
            "id": "rtb-072a9d9a316726774",
            "owner_id": "897903365025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.198.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-030874af89d019462",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.198.3.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-030874af89d019462",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0d532dd3c761fb73b",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "brown2-2"
            },
            "tags_all": {
              "Name": "brown2-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04af33b2f82995bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown2",
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "brown3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:route-table/rtb-0e54a4fe04c0b82b3",
            "id": "rtb-0e54a4fe04c0b82b3",
            "owner_id": "897903365025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.198.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-030874af89d019462",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.198.2.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-030874af89d019462",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-059918d480898cc0a",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "brown3"
            },
            "tags_all": {
              "Name": "brown3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddd99e664a514f51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown3",
            "aws_vpc.brown3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "net1brown1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dec116ab03b9a06",
            "route_table_id": "rtb-0e90b301dca2a0841",
            "subnet_id": "subnet-0899884602e9349d5"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown1",
            "aws_route_table.brown1",
            "aws_subnet.net1brown1",
            "aws_vpc.brown1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "net1brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051a32a8607a2ab68",
            "route_table_id": "rtb-00deb86487e721607",
            "subnet_id": "subnet-059a906d68ddfb734"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown2",
            "aws_route_table.brown2",
            "aws_subnet.net1brown2",
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "net1brown3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a04324870f13961a",
            "route_table_id": "rtb-0e54a4fe04c0b82b3",
            "subnet_id": "subnet-0e332a0c7686fb2f0"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown3",
            "aws_route_table.brown3",
            "aws_subnet.net1brown3",
            "aws_vpc.brown3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "net2brown1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a54aa53e6d06a8b8",
            "route_table_id": "rtb-0e90b301dca2a0841",
            "subnet_id": "subnet-0e24c66a67fdc4611"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown1",
            "aws_route_table.brown1",
            "aws_subnet.net2brown1",
            "aws_vpc.brown1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "net2brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0467c05911763a0bf",
            "route_table_id": "rtb-00deb86487e721607",
            "subnet_id": "subnet-0b23aa6d9b2491184"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown2",
            "aws_route_table.brown2",
            "aws_subnet.net2brown2",
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "net2brown3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0323bf310101c0a26",
            "route_table_id": "rtb-0e54a4fe04c0b82b3",
            "subnet_id": "subnet-03995bc3f3d45c1b4"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown3",
            "aws_route_table.brown3",
            "aws_subnet.net2brown3",
            "aws_vpc.brown3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "net3brown1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0318013c864870817",
            "route_table_id": "rtb-0e90b301dca2a0841",
            "subnet_id": "subnet-01ccff4168f184aa5"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown1",
            "aws_route_table.brown1",
            "aws_subnet.net3brown1",
            "aws_vpc.brown1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "net3brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d6bd98f7f23612e",
            "route_table_id": "rtb-00deb86487e721607",
            "subnet_id": "subnet-02c128e072c592f57"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown2",
            "aws_route_table.brown2",
            "aws_subnet.net3brown2",
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "net3brown3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caabda3283fc2921",
            "route_table_id": "rtb-0e54a4fe04c0b82b3",
            "subnet_id": "subnet-00c46264d3ec0fa90"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown3",
            "aws_route_table.brown3",
            "aws_subnet.net3brown3",
            "aws_vpc.brown3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "net4brown1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e44cd27686b841e",
            "route_table_id": "rtb-0e90b301dca2a0841",
            "subnet_id": "subnet-00a3693040b79bb7c"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown1",
            "aws_route_table.brown1",
            "aws_subnet.net4brown1",
            "aws_vpc.brown1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "net4brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056275bffb8a1cef1",
            "route_table_id": "rtb-00deb86487e721607",
            "subnet_id": "subnet-03f21b17ead306c47"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown2",
            "aws_route_table.brown2",
            "aws_subnet.net4brown2",
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "net4brown3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00361576d7c5beb9d",
            "route_table_id": "rtb-0e54a4fe04c0b82b3",
            "subnet_id": "subnet-0a6ed08944781c7d3"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown3",
            "aws_route_table.brown3",
            "aws_subnet.net4brown3",
            "aws_vpc.brown3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "net5brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047729f635e626ae7",
            "route_table_id": "rtb-0ebe92227eb712350",
            "subnet_id": "subnet-01b68bc91633b1007"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown2",
            "aws_route_table.brown2-1",
            "aws_subnet.net5brown2",
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "net6brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d39180303482318f",
            "route_table_id": "rtb-0ebe92227eb712350",
            "subnet_id": "subnet-0e2300637520f6315"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown2",
            "aws_route_table.brown2-1",
            "aws_subnet.net6brown2",
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "net7brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a91c9c1621ed2ef4",
            "route_table_id": "rtb-072a9d9a316726774",
            "subnet_id": "subnet-01db799515d35d781"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown2",
            "aws_route_table.brown2-2",
            "aws_subnet.net7brown2",
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "net8brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08450ad8fe627fcea",
            "route_table_id": "rtb-072a9d9a316726774",
            "subnet_id": "subnet-0e2a4b48302864c3e"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.browntgw",
            "aws_internet_gateway.brown2",
            "aws_route_table.brown2-2",
            "aws_subnet.net8brown2",
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "brown1sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:security-group/sg-0c6cb1df55c1b42c6",
            "description": "brown1 security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6cb1df55c1b42c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "brown1sg",
            "name_prefix": "",
            "owner_id": "897903365025",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "brown1sg"
            },
            "tags_all": {
              "Name": "brown1sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c49e73e56e0be065"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.brown1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "brown2sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:security-group/sg-06ad6e9ff507ee71d",
            "description": "brown2 security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ad6e9ff507ee71d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "brown2sg",
            "name_prefix": "",
            "owner_id": "897903365025",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "brown2sg"
            },
            "tags_all": {
              "Name": "brown2sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04af33b2f82995bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "brown3sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:security-group/sg-06dc6c1d6312b2783",
            "description": "brown3 security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06dc6c1d6312b2783",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "brown3sg",
            "name_prefix": "",
            "owner_id": "897903365025",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "brown3sg"
            },
            "tags_all": {
              "Name": "brown3sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddd99e664a514f51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.brown3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "brown1eg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1175654244",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c6cb1df55c1b42c6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.brown1sg",
            "aws_vpc.brown1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "brown1in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3365639450",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c6cb1df55c1b42c6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.brown1sg",
            "aws_vpc.brown1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "brown2eg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3678284701",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06ad6e9ff507ee71d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.brown2sg",
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "brown2in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-208138886",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06ad6e9ff507ee71d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.brown2sg",
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "brown3eg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2727616286",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06dc6c1d6312b2783",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.brown3sg",
            "aws_vpc.brown3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "brown3in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2024770088",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06dc6c1d6312b2783",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.brown3sg",
            "aws_vpc.brown3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net1brown1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:subnet/subnet-0899884602e9349d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.198.1.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0899884602e9349d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897903365025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net1brown1"
            },
            "tags_all": {
              "Name": "net1brown1"
            },
            "vpc_id": "vpc-0c49e73e56e0be065"
          },
          "dependencies": [
            "aws_vpc.brown1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net1brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:subnet/subnet-059a906d68ddfb734",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.198.2.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059a906d68ddfb734",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897903365025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net1brown2"
            },
            "tags_all": {
              "Name": "net1brown2"
            },
            "vpc_id": "vpc-04af33b2f82995bef"
          },
          "dependencies": [
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net1brown3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:subnet/subnet-0e332a0c7686fb2f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.198.3.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e332a0c7686fb2f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897903365025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net1brown3"
            },
            "tags_all": {
              "Name": "net1brown3"
            },
            "vpc_id": "vpc-0ddd99e664a514f51"
          },
          "dependencies": [
            "aws_vpc.brown3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net2brown1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:subnet/subnet-0e24c66a67fdc4611",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.198.1.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e24c66a67fdc4611",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897903365025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net2brown1"
            },
            "tags_all": {
              "Name": "net2brown1"
            },
            "vpc_id": "vpc-0c49e73e56e0be065"
          },
          "dependencies": [
            "aws_vpc.brown1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net2brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:subnet/subnet-0b23aa6d9b2491184",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.198.2.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b23aa6d9b2491184",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897903365025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net2brown2"
            },
            "tags_all": {
              "Name": "net2brown2"
            },
            "vpc_id": "vpc-04af33b2f82995bef"
          },
          "dependencies": [
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net2brown3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:subnet/subnet-03995bc3f3d45c1b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.198.3.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03995bc3f3d45c1b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897903365025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net2brown3"
            },
            "tags_all": {
              "Name": "net2brown3"
            },
            "vpc_id": "vpc-0ddd99e664a514f51"
          },
          "dependencies": [
            "aws_vpc.brown3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net3brown1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:subnet/subnet-01ccff4168f184aa5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.198.1.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ccff4168f184aa5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897903365025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net3brown1"
            },
            "tags_all": {
              "Name": "net3brown1"
            },
            "vpc_id": "vpc-0c49e73e56e0be065"
          },
          "dependencies": [
            "aws_vpc.brown1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net3brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:subnet/subnet-02c128e072c592f57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.198.2.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c128e072c592f57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897903365025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net3brown2"
            },
            "tags_all": {
              "Name": "net3brown2"
            },
            "vpc_id": "vpc-04af33b2f82995bef"
          },
          "dependencies": [
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net3brown3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:subnet/subnet-00c46264d3ec0fa90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.198.3.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c46264d3ec0fa90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897903365025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net3brown3"
            },
            "tags_all": {
              "Name": "net3brown3"
            },
            "vpc_id": "vpc-0ddd99e664a514f51"
          },
          "dependencies": [
            "aws_vpc.brown3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net4brown1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:subnet/subnet-00a3693040b79bb7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.198.1.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a3693040b79bb7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897903365025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net4brown1"
            },
            "tags_all": {
              "Name": "net4brown1"
            },
            "vpc_id": "vpc-0c49e73e56e0be065"
          },
          "dependencies": [
            "aws_vpc.brown1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net4brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:subnet/subnet-03f21b17ead306c47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.198.2.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f21b17ead306c47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897903365025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net4brown2"
            },
            "tags_all": {
              "Name": "net4brown2"
            },
            "vpc_id": "vpc-04af33b2f82995bef"
          },
          "dependencies": [
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net4brown3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:subnet/subnet-0a6ed08944781c7d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.198.3.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6ed08944781c7d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897903365025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net4brown3"
            },
            "tags_all": {
              "Name": "net4brown3"
            },
            "vpc_id": "vpc-0ddd99e664a514f51"
          },
          "dependencies": [
            "aws_vpc.brown3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net5brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:subnet/subnet-01b68bc91633b1007",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.198.2.64/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b68bc91633b1007",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897903365025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net5brown2"
            },
            "tags_all": {
              "Name": "net5brown2"
            },
            "vpc_id": "vpc-04af33b2f82995bef"
          },
          "dependencies": [
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net6brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:subnet/subnet-0e2300637520f6315",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.198.2.80/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2300637520f6315",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897903365025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net6brown2"
            },
            "tags_all": {
              "Name": "net6brown2"
            },
            "vpc_id": "vpc-04af33b2f82995bef"
          },
          "dependencies": [
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net7brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:subnet/subnet-01db799515d35d781",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.198.2.96/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01db799515d35d781",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897903365025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net7brown2"
            },
            "tags_all": {
              "Name": "net7brown2"
            },
            "vpc_id": "vpc-04af33b2f82995bef"
          },
          "dependencies": [
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net8brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:subnet/subnet-0e2a4b48302864c3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.198.2.112/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2a4b48302864c3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897903365025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "net8brown2"
            },
            "tags_all": {
              "Name": "net8brown2"
            },
            "vpc_id": "vpc-04af33b2f82995bef"
          },
          "dependencies": [
            "aws_vpc.brown2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "brown1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:vpc/vpc-0c49e73e56e0be065",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.198.1.0/24",
            "default_network_acl_id": "acl-057b6fc34d0de04d5",
            "default_route_table_id": "rtb-03306faf6ad483dbf",
            "default_security_group_id": "sg-05dae164039a0926f",
            "dhcp_options_id": "dopt-11a1fb6a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c49e73e56e0be065",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03306faf6ad483dbf",
            "owner_id": "897903365025",
            "tags": {
              "Name": "brown1"
            },
            "tags_all": {
              "Name": "brown1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "brown2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:vpc/vpc-04af33b2f82995bef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.198.2.0/24",
            "default_network_acl_id": "acl-0dc0cae02534d3f34",
            "default_route_table_id": "rtb-0a055ceeac7186e5e",
            "default_security_group_id": "sg-02f4bb569df5547d5",
            "dhcp_options_id": "dopt-11a1fb6a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04af33b2f82995bef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a055ceeac7186e5e",
            "owner_id": "897903365025",
            "tags": {
              "Name": "brown2"
            },
            "tags_all": {
              "Name": "brown2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "brown3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897903365025:vpc/vpc-0ddd99e664a514f51",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.198.3.0/24",
            "default_network_acl_id": "acl-0adf83dae11eed317",
            "default_route_table_id": "rtb-0ec0502bfb9f06703",
            "default_security_group_id": "sg-0942a10595c5bedad",
            "dhcp_options_id": "dopt-11a1fb6a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ddd99e664a514f51",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec0502bfb9f06703",
            "owner_id": "897903365025",
            "tags": {
              "Name": "brown3"
            },
            "tags_all": {
              "Name": "brown3"
            }
          }
        }
      ]
    }
  ]
}